<resources>
    <string name="language_setting">Idioma</string>
    <string name="english">Inglés</string>
    <string name="spanish">Español</string>
    <string name="app_name">Salud al Dia</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Inicia sesión o Registrate</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="welcome">"Bienvenido"</string>
    <string name="invalid_username">Usuario invalido</string>
    <string name="invalid_password">La contraseña debe tener más de 5 caracteres</string>
    <string name="login_failed">"Inicio de sesión fallido"</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="no_history_events_message">No hay eventos en el historial para mostrar.</string>
    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>
    <string name="default_web_client_id">872461959754-voncofidg6tag0jd5p5e7vie278s9a0g.apps.googleusercontent.com</string>
    <string-array name="treatment_states">
        <item>activo</item>
        <item>inactivo</item>
    </string-array>
    <string-array name="frequency_options">
        <item>Diario</item>
        <item>Semanal</item>
        <item>Días específicos</item>
    </string-array>
    <string name="app_logo">Logo de la app</string>
    <string name="main_image">Imagen principal</string>
    <string name="settingsActivity_title">Configuración</string>
    <string name="text_app_preferences">Preferencias de la aplicación</string>
    <string name="dark_mode">Modo oscuro</string>
    <string name="notification_sound">Sonido de notificación</string>
    <string name="language">Idioma</string>
    <string name="spanish_display">Español</string>
    <string name="english_display">Inglés</string>
    <string-array name="languages_array">
        <item>@string/spanish_display</item>
        <item>@string/english_display</item>
    </string-array>
    <string name="font_size">Tamaño de letra</string>
    <string name="small_display">Pequeño</string>
    <string name="medium_display">Mediano</string>
    <string name="large_display">Grande</string>
    <string-array name="font_size_array">
        <item>@string/small_display</item>
        <item>@string/medium_display</item>
        <item>@string/large_display</item>
    </string-array>
    <string name="save_button_settings">Guardar cambios</string>
    <string name="restart_app_title">¿Estas seguro?</string>
    <string name="restart_app_message">Modificar el idioma necesita reiniciar la app</string>
    <string name="restart_button">Confirmar</string>
    <string name="cancel_button">Cancelar</string>
    <string name="adult_profile_activity_title">Perfil de usuario</string>
    <string name="adult_profile_personal_data">Datos personales</string>
    <string name="adult_profile_names">Nombres</string>
    <string name="adult_profile_lastnames">Apellidos</string>
    <string name="adult_profile_email">Correo</string>
    <string name="adult_profile_phone">Teléfono</string>
    <string name="adult_profile_age">Edad</string>
    <string name="adult_profile_weight">Peso</string>
    <string name="adult_profile_emergency_contact">Contacto de emergencia</string>
    <string name="adult_profile_allergies">Alergias</string>
    <string name="adult_profile_qr_code">Código QR de tu Perfil</string>
    <string name="adult_profile_button_save">Guardar</string>
    <string name="adult_profile_button_cancel">Cancelar</string>
    <string name="adult_profile_button_treatments">Tratamientos</string>
    <string name="adult_profile_button_history">Historial</string>
    <string name="adult_profile_toast_profile_not_found">Perfil no encontrado</string>
    <string name="adult_main_activity_title"> Bienvenido</string>
    <string name="adult_main_activity_treatment_tab">Tratamientos</string>
    <string name="adult_main_activity_calendar_tab">Calendario</string>
    <string name="login_activity_title">Iniciar Sesión</string>
    <string name="login_activity_email">Correo</string>
    <string name="login_activity_email_hint">ejemplo@correo.com</string>
    <string name="login_activity_password">Contraseña</string>
    <string name="login_activity_password_hint">Contraseña</string>
    <string name="login_activity_button_login">Iniciar sesión</string>
    <string name="login_activity_button_signin">¿No tienes cuenta? Regístrate</string>
    <string name="login_activity_button_reset_pass">¿Olvidaste tu contraseña?</string>
    <string name="select_role_activity_title">Selecciona tu rol</string>
    <string name="select_role_activity_role_older_adult">Soy un Adulto Mayor</string>
    <string name="select_role_activity_role_caregiver">Soy un Cuidador</string>
    <string name="register_activity_title">Registro de usuario</string>
    <string name="register_activity_names">Nombres</string>
    <string name="register_activity_names_hint">Juan Carlos</string>
    <string name="register_activity_email">Correo</string>
    <string name="register_activity_email_hint">ejemplo@correo.com</string>
    <string name="register_activity_password">Contraseña</string>
    <string name="register_activity_password_hint">Contraseña</string>
    <string name="register_activity_password_confirm">Confirmar contraseña</string>
    <string name="register_activity_password_confirm_hint">Confirmar contraseña</string>
    <string name="register_activity_select_role">Selecciona tu rol</string>
    <string name="register_activity_role_older_adult">Adulto mayor</string>
    <string name="register_activity_role_caregiver">Cuidador</string>
    <string name="register_activity_button_login">Iniciar sesión</string>
    <string name="register_activity_button_signin">Registrar</string>
    <string name="register_activity_button_return">Volver</string>
    <string name="recover_activity_title">Restablecer contraseña</string>
    <string name="recover_activity_email">Correo</string>
    <string name="recover_activity_email_hint">ejemplo@correo.com</string>
    <string name="recover_activity_button_send_link">Enviar solicitud</string>
    <string name="recover_activity_button_return">Volver</string>
    <string name="notifications_activity_title">Notificaciones</string>
    <string name="notifications_activity_list_notifications">Lista de notificaciones</string>
    <string name="new_treatment_activity_title">Nuevo tratamiento</string>
    <string name="new_treatment_ativity_treatment_data">Datos del tratamiento</string>
    <string name="new_treatment_ativity_name">Nombre</string>
    <string name="new_treatment_ativity_name_hint">Control de diabetes</string>
    <string name="new_treatment_ativity_start_date">Fecha inicio</string>
    <string name="new_treatment_ativity_button_select_start_date">Selecciona fecha de inicio</string>
    <string name="new_treatment_ativity_end_date">Fecha de fin</string>
    <string name="new_treatment_ativity_button_select_end_date">Selecciona fecha de fin</string>
    <string name="new_treatment_ativity_description">Descripción</string>
    <string name="new_treatment_ativity_description_hint">Tratamiento para estabilizar la glucosa en sangre</string>
    <string name="new_treatment_ativity_button_state">Estado</string>
    <string name="new_treatment_ativity_button_save_treatment">Guardar tratamiento</string>
    <string name="new_treatment_ativity_treatment_save">Tratamiento guardado</string>
    <string name="treatments_activity_title">Tratamientos</string>
    <string name="treatments_activity_list">Lista de tratamientos</string>
    <string name="treatment_details_activity_title">Tratamiento</string>
    <string name="treatments_details_activity_data">Detalles del tratamiento</string>
    <string name="treatments_details_activity_name">Nombre del tratamiento</string>
    <string name="treatments_details_activity_start_date">Fecha de inicio</string>
    <string name="treatments_details_activity_end_date">Fecha de fin</string>
    <string name="treatments_details_activity_description">Descripción</string>
    <string name="treatments_details_activity_state">Estado</string>
    <string name="treatments_details_activity_button_new_symptom">Agregar Sintoma</string>
    <string name="treatments_details_activity_button_edit">Editar</string>
    <string name="treatments_details_activity_button_save">Guardar</string>
    <string name="treatments_details_activity_button_cancel">Cancelar</string>
    <string name="treatments_details_activity_list_medications">Lista de medicamentos</string>
    <string name="reminder_activity_title">Recordatorio</string>
    <string name="reminder_activity_subtitle">Datos del recordatorio</string>
    <string name="reminder_activity_start_date">Fecha de inicio</string>
    <string name="reminder_activity_end_date">Fecha de fin</string>
    <string name="reminder_activity_repetitive">¿Se repite?</string>
    <string name="reminder_activity_frecuency">Frecuencia</string>
    <string name="reminder_activity_monday">Lun</string>
    <string name="reminder_activity_tuesday">Mar </string>
    <string name="reminder_activity_wednesday">Mié </string>
    <string name="reminder_activity_thursday">Jue</string>
    <string name="reminder_activity_friday">Vie</string>
    <string name="reminder_activity_saturday">Sáb</string>
    <string name="reminder_activity_sunday">Dom</string>
    <string name="reminder_activity_schedules">Horarios</string>
    <string name="reminder_activity_no_schedules">No hay horarios seleccionados</string>
    <string name="reminder_activity_add_time">Añadir hora</string>
    <string name="medication_details_activity_subtitle">Datos del medicamento</string>
    <string name="medication_details_activity_name">Nombre</string>
    <string name="medication_details_activity_name_hint">Paracetamol</string>
    <string name="medication_details_activity_presentation">Presentación</string>
    <string name="medication_details_activity_presentation_hint">Jarabe</string>
    <string name="medication_details_activity_dose">Dosis</string>
    <string name="medication_details_activity_dose_hint">1 pastilla (500mg)</string>
    <string name="medication_details_activity_via">Vía</string>
    <string name="medication_details_activity_via_hint">Oral</string>
    <string name="medication_details_activity_number_of_days">N° de días</string>
    <string name="medication_details_activity_number_of_days_hint">2</string>
    <string name="medication_details_activity_annotations">Anotaciones</string>
    <string name="medication_details_activity_annotations_hint">En ayunas</string>
    <string name="medication_details_activity_state">Estado</string>
    <string name="medication_details_activity_buton_edit_medication">Editar</string>
    <string name="medication_details_activity_buton_edit_save">Guardar</string>
    <string name="medication_details_activity_buton_edit_cancel">Cancelar</string>
    <string name="medication_details_activity_reminder_data">Datos del recordatorio</string>
    <string name="medication_details_activity_reminder_no_data">Sin recordatorio programado</string>
    <string name="medication_details_activity_reminder_start_date">Inicio: </string>
    <string name="medication_details_activity_reminder_end_date">Fin: </string>
    <string name="medication_details_activity_reminder_repetitive">Recurrente: </string>
    <string name="medication_details_activity_reminder_frecuency">Frecuencia: </string>
    <string name="medication_details_activity_reminder_scheduled_hours">Horas: </string>
    <string name="medication_details_activity_reminder_scheduled_days">Días: </string>
    <string name="medication_details_activity_reminder_button_edit">Editar</string>
</resources>