<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/adult_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvNewTreatment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_treatment_ativity_treatment_data"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />
        <TextView
            android:id="@+id/textViewTreatmentNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_treatment_ativity_name"
            android:layout_marginTop="8dp" />
        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_treatment_ativity_name_hint"
            android:inputType="textPersonName"
            android:layout_marginTop="8dp" />
        <TextView
            android:id="@+id/textViewStartDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_treatment_ativity_start_date"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/buttonStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_treatment_ativity_button_select_start_date" />

        <TextView
            android:id="@+id/textViewEndDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_treatment_ativity_end_date"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/buttonEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_treatment_ativity_button_select_end_date" />

        <TextView
            android:id="@+id/textViewTreatmentDescriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_treatment_ativity_description"
            android:layout_marginTop="8dp" />
        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_treatment_ativity_description_hint"
            android:inputType="textMultiLine"
            android:minLines="1"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/textViewTreatmentStateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_treatment_ativity_button_state"
            android:layout_marginTop="8dp" />
        <Spinner
            android:id="@+id/spinnerState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:entries="@array/treatment_states" />

        <Button
            android:id="@+id/buttonSaveTreatment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_treatment_ativity_button_save_treatment"
            android:layout_marginTop="24dp" />
    </LinearLayout>
</LinearLayout>
