<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recoverLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="#FFFFFF">
    <TextView
        android:id="@+id/txtSigninLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:text="@string/recover_activity_title"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/txtEmailLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold|italic"
        android:text="@string/recover_activity_email"
        android:textColor="@color/black" />
    <EditText
        android:id="@+id/edtEmailRecover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recover_activity_email_hint"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        />

    <Button
        android:id="@+id/btnRecover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recover_activity_button_send_link"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnBackToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recover_activity_button_return"
        android:layout_marginTop="8dp"
        android:backgroundTint="#AAAAAA"/>
</LinearLayout>