<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.medication.MedicationDetailsActivity">

    <include
        android:id="@+id/toolbar_adult"
        layout="@layout/adult_toolbar" />

    <TextView
        android:id="@+id/tvMedicationDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/medication_details_activity_subtitle"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_adult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/scrollContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/tvMedicationDetails"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:text="@string/medication_details_activity_name"/>
            <EditText
                android:id="@+id/etName"
                android:hint="@string/medication_details_activity_name_hint"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:text="@string/medication_details_activity_presentation"/>
            <EditText
                android:id="@+id/etMedicationPresentation"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/medication_details_activity_presentation_hint" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:text="@string/medication_details_activity_dose"/>
            <EditText
                android:id="@+id/etDose"
                android:hint="@string/medication_details_activity_dose_hint"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:text="@string/medication_details_activity_via"/>
            <EditText
                android:id="@+id/etMedicationVia"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/medication_details_activity_via_hint" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:text="@string/medication_details_activity_annotations"/>
            <EditText
                android:id="@+id/etNotes"
                android:hint="@string/medication_details_activity_annotations_hint"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:text="@string/medication_details_activity_number_of_days"/>
            <EditText
                android:id="@+id/etMedicationNumber_of_days"
                android:enabled="false"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/medication_details_activity_number_of_days_hint" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:text="@string/medication_details_activity_state"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:id="@+id/txtMedicationState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:text=""
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"
                android:layout_marginTop="8dp">

                <Button
                    android:id="@+id/btnEditMedication"
                    android:text="@string/medication_details_activity_buton_edit_medication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/btnSaveMedication"
                    android:text="@string/medication_details_activity_buton_edit_save"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/btnCancelMedication"
                    android:text="@string/medication_details_activity_buton_edit_cancel"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/reminderCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:contentPadding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvReminderDataLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/medication_details_activity_reminder_data"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp" />

                    <TextView
                        android:id="@+id/tvReminderInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/medication_details_activity_reminder_no_data"
                        android:paddingBottom="8dp" />

                    <LinearLayout
                        android:id="@+id/reminderInfoLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            android:layout_marginBottom="4dp">
                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_calendar"
                                android:contentDescription="Fecha de inicio"
                                android:layout_marginEnd="8dp"/>
                            <TextView
                                android:id="@+id/tvStartDate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/medication_details_activity_reminder_start_date"
                                android:textColor="?android:attr/textColorPrimary"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            android:layout_marginBottom="4dp">
                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/calendar_end"
                                android:contentDescription="Fecha de fin"
                                android:layout_marginEnd="8dp"/>
                            <TextView
                                android:id="@+id/tvEndDate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/medication_details_activity_reminder_end_date"
                                android:textColor="?android:attr/textColorSecondary"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            android:layout_marginBottom="4dp">
                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/repeat"
                                android:contentDescription="Recurrencia"
                                android:layout_marginEnd="8dp"/>
                            <TextView
                                android:id="@+id/tvRecurring"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/medication_details_activity_reminder_repetitive"
                                android:textColor="?android:attr/textColorSecondary"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            android:layout_marginBottom="4dp">
                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/frecuency"
                                android:contentDescription="Frecuencia"
                                android:layout_marginEnd="8dp"/>
                            <TextView
                                android:id="@+id/tvFrequency"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/medication_details_activity_reminder_frecuency"
                                android:textColor="?android:attr/textColorSecondary"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            android:layout_marginBottom="4dp">
                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/time"
                                android:contentDescription="Horas programadas"
                                android:layout_marginEnd="8dp"/>
                            <TextView
                                android:id="@+id/tvHours"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/medication_details_activity_reminder_scheduled_hours"
                                android:textColor="?android:attr/textColorSecondary"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            android:layout_marginBottom="4dp">
                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/days"
                                android:contentDescription="Días programados"
                                android:layout_marginEnd="8dp"/>
                            <TextView
                                android:id="@+id/tvDays"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/medication_details_activity_reminder_scheduled_days"
                                android:textColor="?android:attr/textColorSecondary"/>
                        </LinearLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/btnEditReminder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/medication_details_activity_reminder_button_edit"
                        android:layout_gravity="end"
                        android:layout_marginTop="8dp" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>